Support module path in test workers